--- a/templates/home.html
+++ b/templates/home.html
@@ -32,8 +32,8 @@
                         {{ task.task }}
                         <span style="position: relative; float: right;">
                             <a href="{% url 'mark_as_done' task.pk %}" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            <a href="{% url 'delete_task' task.pk %}" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                            <a href="{% url 'edit_task' task.pk %}" class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
                 </div>
@@ -46,11 +46,15 @@
                 <div class="card m-1">
                     <div class="card-body">
                         {{ task.task }}
+                         <span style="position: relative; float: right;">
+                            <a href="{% url 'mark_as_undone' task.pk %}" class="btn btn-danger"><i class="fa fa-times"></i> Mark as undone</a>
+                        </span>
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
+
         <div class="row">
             <div class="col-md-6 col-lg-6 p-0" style="position: absolute; bottom: 50px;">
                 <!-- To Do Form -->
